<resources>
    <string name="app_name">NewDeom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="findpassword">修改密码</string>
    <string name="UserResign">用户注册</string>
    <string name="BindPaybao">绑定支付宝</string>
    <string name="BankCradManagement">银行卡管理</string>
    <string name="MyCenter">个人中心</string>
    <string name="Information">个人信息</string>
    <string name="setting">设置</string>
    <string name="customer">客服</string>
    <string name="Pay_User_Phone">支付宝账号</string>
    <string name="Message_yanzheng">验证码</string>
    <string name="Please_Write_Message">请填写验证码</string>
    <string name="Obtain_Message">获取验证码</string>
    <string name="Please_Writer_Pay_Phone">请填写支付宝账号</string>
    <string name="Sure_Bind">确认绑定</string>
    <string name="sure">确定</string>
    <string name="Please_write_Password">请输入密码</string>
    <string name="Please_write_User_Phone">请输入用户名</string>
    <string name="Phone_Number">手机号码</string>
    <string name="Login_Password">登陆密码</string>
    <string name="login">登陆</string>
    <string name="Hurry_Resign">立即注册</string>
    <string name="Forgot_Password">忘记密码</string>
    <string name="Colourful_Hall">购彩大厅</string>
    <string name="documentary">跟单</string>
    <string name="score">比分</string>
    <string name="my">我的</string>
    <string name="seticon">设置头像</string>
    <string name="setname">名称</string>
    <string name="RealName">真实姓名</string>
    <string name="Id_NumBer">证件号码</string>
    <string name="Bank_number">银行卡号</string>
    <string name="Change_Password">修改密码</string>
    <string name="Login_out">退出当前账户</string>
    <string name="lalala">啦啦啦</string>
    <string name="Number_id">654328765491832</string>
    <string name="Phone_number">15801693719</string>
    <string name="User">用户名</string>
    <string name="Password">密码</string>
    <string name="yaoqing_Number">邀请码</string>
    <string name="Please_Phone_Number">请输入手机号码</string>
    <string name="Please_write_yaoqing_number">请输入邀请码</string>
    <string name="agreen">我已阅读并同意</string>
    <string name="User_xieyi">《用户服务协议》</string>
    <string name="Resign">注册</string>
    <string name="fenndback">意见反馈</string>
    <string name="helpcenter">帮助中心</string>
    <string name="repeat_service">重置服务连接</string>
    <string name="guanyu_my">关于我们</string>
    <string name="hot_caizhong">热门彩种</string>
    <string name="hot_football">竞猜足球</string>
    <string name="hot_baskball">竞猜篮球</string>
    <string name="choose_nine">任选9场</string>
    <string name="victory_shisi">胜负14场</string>
    <string name="Notice">公告:</string>
    <string name="Sufficient_relevance">竟足相关</string>
    <string name="More"><![CDATA[更多>>]]></string>
    <string name="data">2019-04-11</string>
    <string name="End">截止</string>
    <string name="Barcelona">巴塞罗那</string>
    <string name="Manchester_United">曼彻斯特联</string>
    <string name="win">胜3.38</string>
    <string name="flat">平3.35</string>
    <string name="negative">负1.17</string>
    <string name="Betting_money">投注金额</string>
    <string name="five_money">50元</string>
    <string name="Two_hundred">200元</string>
    <string name="wubaiyuan">500元</string>
    <string name="Forecast_bonus">预测奖金</string>
    <string name="zero">0.00元</string>
    <string name="Please_write_money">请输入自定义金额</string>
    <string name="Immediate_bet">立即投注</string>
    <string name="new_">最新咨询</string>
    <string name="match">赛事咨询</string>
    <string name="Recharge">充值</string>
    <string name="Cash_withdrawal">提现</string>
    <string name="MyOrder">我的订单</string>
    <string name="Betting">已投注</string>
    <string name="Already_won_the_prize">已中奖</string>
    <string name="Pay_Bind">支付宝绑定</string>
    <string name="Bank">银行卡</string>
    <string name="Yue">余额</string>
    <string name="Gold_color">彩金</string>
    <string name="zhongqiang">中奖</string>
    <string name="mingxi">明细</string>
    <string name="stting">设置</string>
    <string name="weihao">尾号9872的储蓄卡</string>
    <string name="jianhang">中国建设银行</string>
    <string name="jingcai">周日竞猜：阿里2球C罗破门</string>
    <string name="jingcai_two">竞猜周日023意甲，皇马将在主场迎接老对手</string>
    <string name="date_fen">2019-03-19 08:30</string>
    <string name="New_Password">新密码</string>
    <string name="Please_write_New_password">请输入新密码</string>
    <string name="pay_froi">支付宝H5-15</string>
    <string name="quict_pay">快捷支付</string>
    <string name="xianxia_moeny">线下打款</string>
</resources>
