<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="101.1dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginRight="@dimen/d15"
        android:layout_marginLeft="@dimen/d20"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_height="100dp">


        <LinearLayout
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_weight="1"

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/infomatio_title"
                    android:textSize="@dimen/f12"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/d25"

                    android:textColor="@color/font_black"
                    android:text="@string/jingcai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_desc"
                    android:layout_marginTop="@dimen/d10"
                    android:textSize="@dimen/f11"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:layout_below="@+id/infomatio_title"
                    android:visibility="visible"
                    android:ellipsize="end"
                    android:textColor="@color/gray_Overall_hint"
                    android:text="@string/jingcai_two"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/infomatio_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/date_fen"
                    android:textColor="@color/gray_Overall_hint"
                    android:textSize="@dimen/f12" />
            </RelativeLayout>



        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/gray_Overall_hint"
        android:layout_height="0.1dp"></View>

</LinearLayout>
