<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yuzishun.newdeom.my.activity.BandingPayActivity">

    <include layout="@layout/title_text"></include>
    <View
        android:background="@color/empt_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d10"></View>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="3"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:text="@string/Pay_User_Phone"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="@dimen/d40"
                        android:layout_weight="1.5"
                        android:textSize="@dimen/f13"
                        android:textColor="@color/font_black"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <com.example.yuzishun.newdeom.login.custom.ClearEditText
                        android:inputType="number"
                        android:id="@+id/pay_phone"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:maxLength="11"
                        android:background="@null"
                        android:hint="@string/Please_Writer_Pay_Phone"
                        android:textColorHint="@color/edittext_hintcolor"
                        android:textSize="@dimen/f12"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/button_binding"
                    android:background="@drawable/login_select"
                    android:text="@string/Sure_Bind"
                    android:layout_centerHorizontal="true"
                    android:enabled="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/f14"
                    android:layout_width="280dp"
                    android:layout_height="40dp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
