<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_shape"
    tools:context="com.example.yuzishun.deomlottery.login.activity.ResignActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/d40">

        <LinearLayout
            android:id="@+id/layout_title_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text=""
                android:id="@+id/title_text"
                android:gravity="center"
                android:ellipsize="end"
                android:maxEms="8"
                android:maxLines="1"

                android:layout_marginLeft="@dimen/d40"
                android:layout_marginRight="@dimen/d40"
                android:textColor="@color/white"
                android:textSize="@dimen/f16"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/image_back"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:gravity="center"
            android:layout_height="match_parent">
            <ImageView
                android:layout_centerVertical="true"
                android:src="@mipmap/back"
                android:layout_width="@dimen/d15"
                android:layout_height="@dimen/d15" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/d20"
        android:orientation="vertical"
        android:background="@mipmap/find_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginTop="@dimen/d40"
            android:layout_marginLeft="@dimen/d30"
            android:layout_marginRight="@dimen/d30"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_weight="1"
                android:background="@drawable/login_edittext_radio"
                android:layout_marginTop="@dimen/d5"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/resign_user"
                        android:layout_marginLeft="@dimen/d10"
                        android:layout_marginTop="@dimen/d1"
                        android:layout_width="@dimen/d15"
                        android:layout_height="@dimen/d15" />
                    <TextView
                        android:text="@string/User"
                        android:textSize="@dimen/f12"
                        android:layout_marginLeft="@dimen/d30"
                        android:textColor="@color/font_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:layout_width="0.1dp"
                    android:layout_toRightOf="@+id/login_password_icon"
                    android:layout_marginTop="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:background="@color/font_black"
                    android:layout_height="match_parent" />
                <RelativeLayout
                    android:layout_weight="1"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.example.yuzishun.deomlottery.login.custom.ClearEditText
                        android:id="@+id/usernameEditText"
                        android:paddingLeft="@dimen/d5"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:layout_toLeftOf="@+id/user_change"
                        android:ellipsize="end"
                        android:background="@null"
                        android:layout_marginLeft="@dimen/d15"
                        android:hint="@string/Please_write_User_Phone"
                        android:textSize="@dimen/f11"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:text="*用户名不能更改"
                        android:id="@+id/user_change"
                        android:layout_centerVertical="true"
                        android:textSize="@dimen/f9"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/d25"

                        android:textColor="@color/login_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:background="@drawable/login_edittext_radio"
                android:layout_marginTop="@dimen/d5"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/find_luck"
                        android:layout_marginLeft="@dimen/d10"
                        android:layout_marginTop="@dimen/d1"
                        android:layout_width="@dimen/d15"
                        android:layout_height="@dimen/d15" />
                    <TextView
                        android:text="@string/Password"
                        android:textSize="@dimen/f12"
                        android:layout_marginLeft="@dimen/d30"
                        android:textColor="@color/font_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:layout_width="0.1dp"
                    android:layout_toRightOf="@+id/login_password_icon"
                    android:layout_marginTop="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:background="@color/font_black"
                    android:layout_height="match_parent" />
                <com.example.yuzishun.deomlottery.login.custom.ClearEditText
                    android:layout_weight="1"
                    android:inputType="textPassword"

                    android:paddingLeft="@dimen/d5"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:id="@+id/passwordEditText"
                    android:ellipsize="end"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/d15"
                    android:hint="@string/Please_write_Password"
                    android:textSize="@dimen/f11"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:background="@drawable/login_edittext_radio"
                android:layout_marginTop="@dimen/d5"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/find_iphone"
                        android:layout_marginLeft="@dimen/d10"
                        android:layout_marginTop="@dimen/d1"
                        android:layout_width="@dimen/d15"
                        android:layout_height="@dimen/d15" />
                    <TextView
                        android:text="手机号码"
                        android:textSize="@dimen/f12"
                        android:layout_marginLeft="@dimen/d30"
                        android:textColor="@color/font_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:layout_width="0.1dp"
                    android:layout_toRightOf="@+id/login_password_icon"
                    android:layout_marginTop="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:background="@color/font_black"
                    android:layout_height="match_parent" />
                <com.example.yuzishun.deomlottery.login.custom.ClearEditText
                    android:inputType="number"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/d5"
                    android:maxLength="11"
                    android:id="@+id/phoneEditText"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/d15"
                    android:hint="@string/Please_Phone_Number"
                    android:textSize="@dimen/f11"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:background="@drawable/login_edittext_radio"
                android:layout_marginTop="@dimen/d5"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/find_yanzheng"
                        android:layout_marginLeft="@dimen/d10"
                        android:layout_marginTop="@dimen/d1"
                        android:layout_width="@dimen/d15"
                        android:layout_height="@dimen/d15" />
                    <TextView
                        android:text="@string/Message_yanzheng"
                        android:textSize="@dimen/f12"
                        android:layout_marginLeft="@dimen/d30"
                        android:textColor="@color/font_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:layout_width="0.1dp"
                    android:layout_toRightOf="@+id/login_password_icon"
                    android:layout_marginTop="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:background="@color/font_black"
                    android:layout_height="match_parent" />
                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.example.yuzishun.deomlottery.login.custom.ClearEditText
                        android:inputType="number"
                        android:layout_weight="1"
                        android:paddingLeft="@dimen/d5"
                        android:maxLength="11"
                        android:id="@+id/phonecodeEditText"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:background="@null"
                        android:layout_marginLeft="@dimen/d15"
                        android:hint="@string/Please_Write_Message"
                        android:textSize="@dimen/f11"
                        android:layout_marginRight="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />


                    <Button
                        android:id="@+id/Hou_Code"
                        android:background="@drawable/login_select"
                        android:layout_width="80dp"
                        android:text="@string/Obtain_Message"
                        android:enabled="true"
                        android:textSize="@dimen/f11"
                        android:textColor="@color/white"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/d10"
                        android:layout_height="30dp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:background="@drawable/login_edittext_radio"
                android:layout_marginTop="@dimen/d5"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:src="@mipmap/resign_newpass"
                        android:layout_marginLeft="@dimen/d10"
                        android:layout_marginTop="@dimen/d1"
                        android:layout_width="@dimen/d15"
                        android:layout_height="@dimen/d15" />
                    <TextView
                        android:text="@string/yaoqing_Number"
                        android:textSize="@dimen/f12"
                        android:layout_marginLeft="@dimen/d30"
                        android:textColor="@color/font_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <TextView
                    android:layout_width="0.1dp"
                    android:layout_toRightOf="@+id/login_password_icon"
                    android:layout_marginTop="@dimen/d10"
                    android:layout_marginBottom="@dimen/d10"
                    android:background="@color/font_black"
                    android:layout_height="match_parent" />
                <com.example.yuzishun.deomlottery.login.custom.ClearEditText
                    android:inputType="number"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/d5"
                    android:maxLength="11"
                    android:id="@+id/yaoqingEditText"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:background="@null"
                    android:layout_marginLeft="@dimen/d15"
                    android:hint="@string/Please_write_yaoqing_number"
                    android:textSize="@dimen/f11"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/d20"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/d30"
                android:layout_marginRight="@dimen/d30"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button_resign"
                    android:background="@drawable/login_select"
                    android:text="@string/Resign"
                    android:layout_centerHorizontal="true"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/f12"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
